--- a/css/default.css
+++ b/css/default.css
@@ -5,7 +5,7 @@
    padding:0;
  }
  
- body{ backround-image: ur1(../img/enmusubi_mark.png),ur1(../img/S__8814606.jpg);
+ body{ background-image: ur1(../img/enmusubi_mark.png),ur1(../img/S__8814606.jpg);
        background-repeat: no-repeat, no-repeat;
        background-size: 100% 100%, contain;
        background-color:lightgrey;
