--- a/css/default.css
+++ b/css/default.css
@@ -129,7 +129,7 @@ p.transition{
 }
 
 p.transition a{
- backround-solor: mediumseagreen;
+ background-color: mediumseagreen;
  color: white;
  font-size: 30px;
  text-decoration: none;
