--- a/css/default.css
+++ b/css/default.css
@@ -7,6 +7,7 @@
  
  body{ background-image: url(../img/enmusubi_mark.png),url(../img/S__8814606.jpg);
        background-repeat: no-repeat, no-repeat;
+       background-size:100px 100px,contain;
        background-color:lightgrey;
        margin: 5px;
      }
